--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-free": "^7.0.0",
     "@hookform/resolvers": "^5.2.1",
     "@tailwindcss/vite": "^4.1.11",
+    "@tanstack/react-query": "^4.42.0",
     "axios": "^1.11.0",
     "flowbite": "^3.1.2",
     "flowbite-datepicker": "^1.3.2",
